Fixes #460 - Site get stuck in loading in safari desktop (in iphone it's working) - added polyfills and some css. Fixes #428 too.

--- a/IsraelHiking.Web/sources/application/components/dialogs/osm-user-dialog.component.css
+++ b/IsraelHiking.Web/sources/application/components/dialogs/osm-user-dialog.component.css
@@ -1,8 +1,8 @@
-﻿/deep/ osm-user-dialog .mat-dialog-title {
+﻿[osm-user-dialog] .mat-dialog-title {
     margin-bottom: 0;
 }
 
-/deep/ osm-user-dialog .mat-dialog-content {
+[osm-user-dialog] .mat-dialog-content {
     max-height: 55vh;
 }
 
@@ -61,7 +61,7 @@
 }
 
 @media (max-width:600px) {
-    /deep/ osm-user-dialog .mat-dialog-content {
+    [osm-user-dialog] .mat-dialog-content {
         max-height: 35vh;
     }
 
